# Solana-sniper-bot

./: .gitignore  README.md  badtokenpump.json  environment.d.ts  index.ts  package-lock.json  package.json  pump,json  tokenpump.json  tokenpump2.json  tokens.json  tsconfig.json
rust-native/: Cargo.toml  index.d.ts  index.node  package.json
rust-native/src/: lib.rs
src/: analize.ts  index.ts  listener.ts  listener.types.ts  pump.ts  sniper.ts
src/analysis/: analysis.types.ts
src/anchor/: index.ts
src/birdEye/: index.ts
src/browser/: constants.ts  headlessBrowser.ts  scrape.ts
src/constants/: index.ts
src/cryptoQueries/: cryptoQueries.types.ts  index.ts
src/cryptoQueries/raydiumSwapUtils/: liquidity.ts
src/decoder/: decoder.types.ts  index.ts  layout.ts  solana-bigint.ts
src/enums/: LiqudityProviderType.ts
src/eventEmitter/: eventEmitter.consts.ts
src/helius/: index.ts
src/jito/: bundles.ts  constants.ts  geyser.ts  leaders.ts  searcher.ts
src/keepAliveHttp/: healthCheck.ts  index.ts  keepAlive.consts.ts  keepAliveHttp.types.ts
src/proto/shredstream/: shredstream.proto
src/pumpFun/: estimator.ts  index.ts  pumpFun.types.ts  utils.ts
src/pumpFun/IDL/: pump-fun.json  pump-fun.ts
src/redis/: index.ts  redis.consts.ts
src/shred/: index.ts
src/slotTrade/: constants.ts
src/solana/: index.ts
src/telegramBot/: index.ts
src/utils/: arrayUtils.ts  enumHelper.ts  envUtils.ts  logger.ts  mathUtils.ts  retry.ts
src/workers/: converter.ts  pool.ts  worker.ts  worker.types.ts
src/yellowstone/: client.ts
utils/: logger.ts
(+2 files in other folders)
