[package]
name = "rust-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
ed25519-dalek = { version = "2.1.1", features = ["std"] }
base64 = "0.22"
solana-sdk      = "2.3"                
spl-associated-token-account = "7.0"  
num-bigint  = { version = "0.4", default-features = false, features = ["std"] }
num-traits  = "0.2"
bincode        = "1.3.3"